--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <br>
         <h2>License</h2>
         MIT License 2.0 
-        <br>Vivek T. Ramamoorthy
+        <br><br>Vivek T. Ramamoorthy
     <br>
     <br>
     <br>
