--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
 <body>
     <h1>MatlabJS</h1>
     <h2>Use common Matlab functions in Javascript</h2>
-    <p> Matlab&reg; and GNUOctave are a high-level programming language used by scientists and engineers.
-        It allows efficient scientific computing in very few lines of code. 
+    <p> Matlab&reg; and GNUOctave are high-level programming languages popular among scientists and engineers.
+        <br>
+        They allow efficient development in <strong>very few lines of code</strong>. 
         <br>
         <br>
         For Matlab&reg; / GNU Octave users who are new to Javascript, things may not be easy.
-        Javascript was simply designed for a different purpose!
+        <br>Javascript was simply designed for a different purpose!
         <br>
         <br>
-        <strong>But no worries!</strong> The purpose of <a target="_blank" href="https://github.com/VivekTRamamoorthy/MatlabJS">MatlabJS</a>
-        is to help Matlab users get a jumpstart in Javascript right away with (almost) the same syntax.
+        <strong>But no worries!</strong> 
+        <br>
+        The purpose of <a target="_blank" href="https://github.com/VivekTRamamoorthy/MatlabJS">MatlabJS</a>
+        is to help Matlab users get a <strong>jumpstart</strong> in Javascript right away with common functions in (almost) the same syntax.
          <br>
         </p>
         <h2>Examples:</h2>
-        Try out these examples in the console:<br>
+        Try out these examples in the console (righclick > inspect):<br>
         <pre>
             <code>
                 a=linspace(0,1,100) <br>
@@ -42,10 +45,10 @@
                 b=eye(8); <br>
                 c=rand(8); <br>
                 d=mul(b,c)
-                
             </code>
         </pre>
-        <h2>How to use in your project</h2>
+
+        <h2>How to use in your project:</h2>
         <li>Add <code>Matlab.js</code> file  from <a target="_blank" href="https://github.com/VivekTRamamoorthy/MatlabJS">MatlabJS</a> to your project.</li>
         <li>Throw in a script tag:</li>
         <pre>
@@ -56,13 +59,10 @@
         <li>Thank me later.</li>
         <br>
         <h2>Drawbacks:</h2>
-        <li> Unfortunately, operator overloading is not permitted in JS. <br>
-             so we cannot yet do <code>c=A*b</code> for matrices
-              and instead have to do <code>c=mul(A,b)</code>. </li>
+        <li> Unfortunately, operator overloading is not permitted in JS. So we cannot yet write <code>c=A*b</code> for matrices
+              and instead have to write <code>c=mul(A,b)</code>. </li>
         <li> The code is not optimised for efficiency.</li>
-        <li> This project is in its primitive stage.<br>
-            More functions will be included as time permits.<br>
-            No guarantees are provided.</li>
+        <li> This project is in its primitive stage. More functions will be included as time permits. And no guarantees are provided.</li>
         <br>
         <h2>License</h2>
         MIT License 2.0 
