--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         Try out these examples in the console (righclick > inspect):<br>
         <pre>
             <code>
+                tic() <br>
                 a=linspace(0,1,100) <br>
                 disp(a) <br>
-                b=eye(8); <br>
-                c=rand(8); <br>
-                d=mul(b,c)
+                b=eye(8) <br>
+                c=rand(8) <br>
+                d=mul(b,c) <br>
+                toc() 
             </code>
         </pre>
 
