updated sort, range

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <tr>
                 <td>sort</td>
                 <td>sort()</td>
-                <td>A=[3,2,1,5,7]<br>sort(A) // [1,2,3,5,7]</td>
+                <td>A=[3,2,1,5,7]<br>sort(A) // A=[1,2,3,5,7] <br>[sorted,indices]=sort(A) // get indices <br> // Caution: This also sorts A in-place</td>
                 <td>Sorts ascending</td>
             </tr>
             <tr>
