--- a/index.html
+++ b/index.html
@@ -550,7 +550,9 @@
                 <td>Linear solve (or) <br>
                     mldivide <br>
                     solve a sys of <br>
-                    linear equations
+                    linear equations<br>
+                    Uses <a href="https://www.npmjs.com/package/ndarray">ndarray js</a> <br>
+                    Include ndarray.js file in your project.
                 </td>
             </tr>
             
