--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
     <div class="">
         <h2>Examples:</h2>
         The library is already loaded in this webpage. <br>
-        Try out these examples in the browser console:<br>
+        Open the browser console using <code>ctrl<code> + <code>shift<code> + <code>i<code> in Windows or <code>cmd<code> + <code>shift<code> + <code>i<code> in Mac.<br>
+        Try out these examples: <br>
         <pre>
             <code>
                 tic() 
-                a=linspace(0,1,100) 
+                a=linspace(0,1) 
                 disp(a)
                 b=eye(8) 
                 c=rand(8) 
