--- a/index.html
+++ b/index.html
@@ -240,6 +240,12 @@
                 <td>Array from a to c in steps of b</td>
             </tr>
             <tr>
+                <td>triu</td>
+                <td>triu(Matrix,k)</td>
+                <td>disp(triu(rand(4))) <br> disp(triu(rand(4),1))</td>
+                <td>Upper trianular matrix</td>
+            </tr>
+            <tr>
                 <td>[A, B]</td>
                 <td>concatRows(A,B)</td>
                 <td>A=ones(3,3)<br>
