--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
                 <td>Produces linearly spaced array. </td>
             </tr>
             <tr>
+                <td>logspace</td>
+                <td>logspace</td>
+                <td>A=logspace(1,1000,4)<br>
+                    // [1 10 100 1000]<br>
+                    B=logspace(1,25,3)<br>
+                    // [1,5,25]
+                </td>
+                <td>Produces linearly spaced array. </td>
+            </tr>
+            <tr>
                 <td>disp, display</td>
                 <td>disp, display</td>
                 <td>A=linspace(0,1)<br>
@@ -326,7 +336,11 @@
                 <td>diag</td>
                 <td>diag(D)</td>
                 <td>
-                    disp(diag([5,3,2]))<br> // returns: <br> [ [5, 0, 0],<br>   [0, 3, 0],<br>   [0, 0, 2] ]
+                    disp(diag([5,3,2]))<br> 
+                    // returns:<br>
+                    // [ [5, 0, 0],<br>
+                    // [0, 3, 0],<br>
+                    // [0, 0, 2] ]
                 </td>
                 <td>Diagonal matrix from an array</td>
             </tr>
@@ -388,7 +402,7 @@
                 <td>repmat</td>
                 <td>repmat(mat,rows,cols)</td>
                 <td>A=rand(2,3) <br>
-                    B=repmat(A,[4,5)<br>
+                    B=repmat(A,4,5)<br>
                     disp(B)
                 </td>
                 <td>Repeat matrix</td>
@@ -405,17 +419,7 @@
             <tr>
                 <td>union</td>
                 <td>union(X,Y)</td>
-                <td>A=[1,2,3,4]]; <br>
-                    B=[5,3,10];<br>
-                    display(union(A,B)) <br>
-                    //[1,2,3,4,5,10]
-                </td>
-                <td>Union of two sets</td>
-            </tr>
-            <tr>
-                <td>union</td>
-                <td>union(X,Y)</td>
-                <td>A=[1,2,3,4]]; <br>
+                <td>A=[1,2,3,4]; <br>
                     B=[5,3,10];<br>
                     display(union(A,B)) <br>
                     //[1,2,3,4,5,10]
