--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <section>
             <h2>Full list of functions: </h2>
             Use left or right arrow keys to scroll if the the table is not fully visible.
-            <table style="width:100%; font-family:courier">
+            <table class = "functionlist">
                 <tr>
                     <th>Matlab function</th>
                     <th>MatlabJS equivalent</th> 
