--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                     <td>exp</td>
                     <td>exp(number or complex or array or complex array</td>
                     <td>exp(1) // 2.718..<br>
-                        a=exp(new cx(0,Math.PI/2)) <br>// 0+1i i.e. a.re=0 a.im=1 <br>
+                        a=exp(new cx(0,Math.PI/2)) <br>disp(a)// 0+1i i.e. a.re=0 a.im=1 <br>
                     </td>
                     <td>Multi dimensional universal exponention function 
                     </td>
